...
          style={({ pressed }) => [
            styles.button,
            styles.primaryButton,
            (pressed || isSaving) ? styles.buttonPressed : null,
          ]}
          disabled={isSaving}>
          {isSaving ? <ActivityIndicator color="#FFFFFF" /> : <Text style={styles.primaryButtonText}>Save</Text>}
        </Pressable>
      </View>
    </ScrollView>
  );
};

...
